--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.2.0",
+    "@vercel/analytics": "^0.1.8",
     "luxon": "^3.2.1",
     "node-fetch": "^2.6.7",
     "react": "^18.2.0",
